--- a/text/abbreviations.tex
+++ b/text/abbreviations.tex
@@ -125,9 +125,45 @@
 \item[RPM] Relativistic Plasma Mirror
 \item[RR] Radiation Reaction
 \item[SF-QED] Strong-Field Quantum Electro-Dynamics
+\item[SHHG] Surface High Harmonic Generation
 \item[TCC] Target Chamber Centre
 \item[XHHG] X-ray High Harmonic Generation
 \item[VLA] Vacuum Laser Acceleration
 \item[ZVP] Zero Vector Potential
+
+\begin{acronym}
+	\acro{1D}{one-dimension}
+	\acro{2D}{two-dimensions}
+	\acro{3D}{three-dimensions}
+	\acro{AOI}{Angle of Incidence}
+	\acro{AR}{Anti-Reflective}
+	\acro{ARP}{Apparent Reflection Point}
+	\acro{BBXRD}{BroadBand X-Ray Diffraction}
+	\acro{BW}{Breit-Wheeler}
+	\acro{CLF}{Central Laser Facility}
+	\acro{CPA}{Chirped Pulse Amplification}
+	\acro{CSE}{Coherent Synchrotron Emission}
+	\acro{CWE}{Coherent Wake Emission}
+	\acro{DPM}{Double Plasma Mirror}
+	\acro{FDTD}{Finite Difference Time Domain}
+	\acro{HB}{Hole boring}
+	\acro{HED}{High-Energy-Density}
+	\acro{HHG}{High Harmonic Generation}
+	\acro{HPC}{High Performance Computing}
+	\acro{OHREX}{ORION High Resolution X-ray}
+	\acro{OMM}{Oscillating Mirror Model}
+	\acro{PIC}{Particle-In-Cell}
+	\acro{PM}{Plasma Mirror}
+	\acro{QED}{Quantum Electro-Dynamics}
+	\acro{ROM}{Relativistic Oscillating Mirror}
+	\acro{RPM}{Relativistic Plasma Mirror}
+	\acro{RR}{Radiation Reaction}
+	\acro{SHHG}{Surface High Harmonic Generation}
+	\acro{SF-QED}{Strong-Field Quantum Electro-Dynamics}
+	\acro{TCC}{Target Chamber Centre}
+	\acro{VLA}{Vacuum Laser Acceleration}
+	\acro{XHHG}{X-ray High Harmonic Generation}
+	\acro{ZVP}{Zero Vector Potential}
+\end{acronym}
 
 \end{mclistof} 
