--- a/text/ch1-intro.tex
+++ b/text/ch1-intro.tex
@@ -32,7 +32,9 @@ We sit on the verge of the exascale revolution, in both computing resources \cit
 
 \ac{HED} physics is the laboratory study of the behaviour of matter with a pressure above \qty{10}{GPa}, approximately one million atmospheres, and containing free electrons not confined to a solid state \cite{drakeFocusHighEnergy2014}, typically in the plasma state of matter. \ac{HED} conditions are found for a vast range of densities and temperatures (from zero to a million million Kelvin) and operating in both the quantum and relativistic realms. The applications are equally diverse, including but not limited to inertial confinement fusion, particle acceleration for scientific or medical purposes and light sources as diagnostic tools. Ubiquitous in the natural universe, beyond our solar system, all that can be observed in the sky is radiation emitted from \ac{HED} plasmas \cite{chenIntroductionPlasmaPhysics2016}.
 
-Independently, the field of attosecond physics has flourished \cite{krauszAttosecondPhysics2009}. By irradiating gas targets with mildly ionising laser pulse intensities, pulses of attosecond radiation, composed of high-order harmonics of the laser, have been generated. Recognised by the 2023 Nobel Prize for Physics, the research of Agostini, Krausz and Huillier has revealed the inner workings of atoms and molecules, tracking fundamental electronic dynamics \cite{ElectronilluminatingLaserPulses2023}. At the intersection of HED and attosecond physics, there is another course for the generation of harmonics with the potential to produce brighter and shorter pulses than those of the laser-gas interaction. This thesis concerns itself with that interaction, that of a high-power short-pulse laser incident on a flat solid target. Through the processes here discussed, state-of-the-art 10 PW laser facilities such as ELI-np \cite{galesExtremeLightInfrastructure2018} can produce electron bunches and light pulses of exceptional charge and brightness, and of attosecond duration, thus uncovering new avenues for attosecond resolution diagnostics and for probing vacuum non-linearities. 
+Independently, the field of attosecond physics has flourished \cite{krauszAttosecondPhysics2009}. By irradiating gas targets with mildly ionising laser pulse intensities, pulses of attosecond radiation, composed of high-order harmonics of the laser, have been generated. Recognised by the 2023 Nobel Prize for Physics, the research of Agostini, Krausz and Huillier have utilised this \ac{HHG} to unveil the inner workings of atoms and molecules, tracking fundamental electronic dynamics \cite{ElectronilluminatingLaserPulses2023}. 
+
+At the intersection of HED and attosecond physics, there is another course for the generation of harmonics with the potential to produce brighter and shorter pulses than those of the laser-gas interaction. This thesis concerns itself with that interaction, that of a high-power short-pulse laser incident on a flat solid target. Through this \ac{SHHG}, state-of-the-art 10 PW laser facilities such as ELI-np \cite{galesExtremeLightInfrastructure2018} can produce electron bunches and light pulses of exceptional charge and brightness, and of attosecond duration, thus uncovering new avenues for attosecond resolution diagnostics and for probing vacuum non-linearities. 
 
 Seemingly counter-intuitively, as the laser power increases, via relativistic effects and for particular initial conditions, greater coherency in electron dynamics can be observed and signals are amplified. Before delving into this fascinating phenomenon, the remainder of this chapter provides some of the relevant background information. Chapter \ref{ch:2-zvp} introduces the \ac{ZVP} model of attosecond absorption to describe this laser-solid interaction. Chapter \ref{ch:3-orion} focuses instead on the reflected radiation and its high harmonic content, specifically with regard to the measurement of X-ray harmonics on the March 2023 ORION experiment. This chapter accessed a moderately different regime to that of \ac{ZVP}. Chapter \ref{ch:4-gemini} brings together both absorption and reflection in the ZVP regime, detailing the upcoming GEMINI PW experiment. Finally, Chapter \ref{ch:5-summary} summarises the body of work covered by this thesis and discusses potential future work.
 
