--- a/text/ch3-orion.tex
+++ b/text/ch3-orion.tex
@@ -5,7 +5,7 @@
 \section{Introduction}
 The simulations of Chapter \ref{ch:2-zvp} are a relatively efficient and cost-effective mode of study. In comparison, high-power laser experiments are a cumbersome and technical challenge. However, the proliferation of errors in simulation codes leads to their inevitable deviation from reality, while reality itself diverges from the idealised conditions of the codes. For now, at least, experiments remain an essential component of the scientific method. This chapter reports on the March 2023 experiment at the ORION laser facility, AWE, Aldermaston, the UK's most powerful laser system. The pulse duration is too long to create the attosecond electron bunches of the previous chapter. Instead, this chapter focuses on the ROM model of HHG. This model describes the properties of radiation reflected from a relativistic laser pulse interaction with a solid-density plasma, another related route to bright attosecond light sources. 
 
-A fundamentally different mechanism to its Nobel prize-winning counterpart, SHHG from solids has demonstrated significantly higher conversion efficiencies and, relying on plasma oscillations not ionisation, does not suffer from the same limits to applied intensity \cite{teubnerHighorderHarmonicsLaserirradiated2009}. SHHG has thus become a field of considerable interest for the production of bright coherent attosecond harmonics. First observed from the interaction of a CO$_2$ laser-solid interaction in 1981 \cite{carmanVisibleHarmonicEmission1981} and followed shortly by a theoretical justification \cite{bezzeridesPlasmaMechanismUltraviolet1982}, interest in HHG was revived by the arrival of CPA technology enabling access to unprecedented laser pulse intensities. To describe this new relativistic interaction, 1994 saw the arrival of a new theory, the \ac{OMM} \cite{bulanovInteractionUltrashortRelativistically1994}. Harmonic of the incident laser pulse were seen to be formed by the Doppler effect induced by a thin reflecting charge sheet at the plasma surface oscillating periodically with the laser pulse. This theory predicts a cutoff harmonic number of $n_\mathrm{c} = 4\gamma_\mathrm{s}^2 $, where $\gamma_\mathrm{s}$ is the maximum gamma factor of the charge sheet. This relatively low cutoff is at odds with experimental results, the current record standing at the 3200\th harmonic observed on the Vulcan PW laser system in 2007 \cite{dromeyBrightMultikeVHarmonic2007}. It was only after the development of relativistic similarity theory \cite{gordienkoScalingsUltrarelativisticLaser2005}, which laid the groundwork for Baeva's ROM model, that the experimentally observed cut-off could now be explained \cite{baevaTheoryHighorderHarmonic2006}. Since ORION and Vulcan parameter spaces are similar, this is the most appropriate description of SHHG and is described in more detail in Section \ref{ch:3-sec:theory}.
+A fundamentally different mechanism to its Nobel prize-winning counterpart, SHHG from solids has demonstrated significantly higher conversion efficiencies and, relying on plasma oscillations not ionisation, does not suffer from the same limits to applied intensity \cite{teubnerHighorderHarmonicsLaserirradiated2009}. SHHG has thus become a field of considerable interest for the production of bright coherent attosecond harmonics. First observed from the interaction of a CO$_2$ laser-solid interaction in 1981 \cite{carmanVisibleHarmonicEmission1981} and followed shortly by a theoretical justification \cite{bezzeridesPlasmaMechanismUltraviolet1982}, interest in HHG was revived by the arrival of CPA technology enabling access to unprecedented laser pulse intensities. To describe this new relativistic interaction, 1994 saw the arrival of a new theory, the \ac{OMM} \cite{bulanovInteractionUltrashortRelativistically1994}. Harmonic of the incident laser pulse were seen to be formed by the Doppler effect induced by a thin reflecting charge sheet at the plasma surface oscillating periodically with the laser pulse. This theory predicts a cutoff harmonic number of $n_\mathrm{c} = 4\gamma_\mathrm{s}^2 $, where $\gamma_\mathrm{s}$ is the maximum gamma factor of the charge sheet. This relatively low cutoff is at odds with experimental results, the current record standing at the 3200\th harmonic observed on the Vulcan PW laser system in 2007 \cite{dromeyBrightMultikeVHarmonic2007}. It was only after the development of relativistic similarity theory \cite{gordienkoScalingsUltrarelativisticLaser2005}, which laid the groundwork for Baeva's ROM model, that the experimentally observed cutoff could now be explained \cite{baevaTheoryHighorderHarmonic2006}. Since ORION and Vulcan parameter spaces are similar, this is the most appropriate description of SHHG and is described in more detail in Section \ref{ch:3-sec:theory}.
 
 There are many fascinating applications for SHHG beyond that of attosecond physics. The high photon energy content of the harmonic beam has excellent penetration into dense materials with preliminary studies indicating notable improvement in energy absorption, suitable for auxiliary heating of ICF targets \cite{paddockEnergyGainWettedfoam2024}. This high energy content also enables the focusing of the harmonic beam to significantly smaller spot sizes than the incident diffraction-limited laser pulse. An all-optical coherent focusing of high harmonics with realistic laser parameters has been shown to produce over 1000 times intensity gain \cite{vincentiAchievingExtremeLight2019}, thus providing a realistic route to the Schwinger limit \cite{quereReflectingPetawattLasers2021}. Such a beam could have potential for enhancing the signal of photon-photon scattering \cite{aboushelbayaOrbitalAngularMomentum2019} or of gravitational waves from twisted light \cite{atongaGravitationalWavesHighpower2023}. Simulations have shown how a harmonic beam can probe \ac{SF-QED} if a solid target is placed at the new focal position \cite{fedeliProbingStrongfieldQED2020}.
 
@@ -17,7 +17,7 @@ For the moderately relativistic sub-picosecond ORION SP1 and SP2 beamlines, the 
 \begin{equation}\label{eq:orion-gamma_s}
 	\gamma_\mathrm{s} = \frac{1}{\sqrt{1-v_\mathrm{prop}^2/c^2}} = \sqrt{ \frac{1 + a(t,x)^2 +  p_\mathrm{prop}^2/(m_\mathrm{e}c)^2}{1 + a(t,x)^2}}.
 \end{equation}
-Equation \ref{eq:orion-gamma_s} indicates surface gamma factors of order unity except at zeros in the vector potential where $\gamma_\mathrm{s} \sim a_0$. In the viscinity of the zero, $a \sim a_0\sin(\omega_L t) \approx a_0\omega_\mathrm{L}t$. Thus, while the velocity of the surface is a smoothly varying function around the maximum, $v_\mathrm{s,\, max} \sim 1 - \mathcal{O}(a_0^{-2})$, the \textit{gamma factor spikes} as the vector potential passes through zero. At this point, the surface emits high-frequency photons. The surface radiates such photons only in the vicinity of the gamma spike. Thus, the pulse width can be approximated. In ZVP theory, zeros overtake the emitted photons. Radiation from the extended electron bunch that is emitted first arrives at the observer last. In the ROM regime, Baeva demonstrates zeroes move at speed $c$. Consequently, all points in the skin depth radiate coherently. Since the radiation overtakes the sub-light speed surface, photons emitted from the surface first are observed first. The radiation emitted therefore has a duration of
+Equation \ref{eq:orion-gamma_s} indicates surface gamma factors of order unity except at zeroes in the vector potential where $\gamma_\mathrm{s} \sim a_0$. In the viscinity of the zero, $a \sim a_0\sin(\omega_L t) \approx a_0\omega_\mathrm{L}t$. Thus, while the velocity of the surface is a smoothly varying function around the maximum, $v_\mathrm{s,\, max} \sim 1 - \mathcal{O}(a_0^{-2})$, the \textit{gamma factor spikes} as the vector potential passes through zero. At this point, the surface emits high-frequency photons. The surface radiates such photons only in the vicinity of the gamma spike. Thus, the pulse width can be approximated. In ZVP theory, zeroes overtake the emitted photons. Radiation from the extended electron bunch that is emitted first arrives at the observer last. In the ROM regime, Baeva demonstrates zeroes move at speed $c$. Consequently, all points in the skin depth radiate coherently. Since the radiation overtakes the sub-light speed surface, photons emitted from the surface first are observed first. The radiation emitted therefore has a duration of
 \begin{equation}
 	\Delta l \approx (c-|\mathbf{v}_\mathrm{s,\, max}|)\Delta t \approx \frac{\Delta t}{\gamma_\mathrm{s,\, max}^2},
 \end{equation}
@@ -36,13 +36,13 @@ Since $1-(\mathbf{v}_\mathrm{s,\, max}/c)^2 = 1/\gamma_\mathrm{s,\, max}^2$, the
 	\Delta t \sim \frac{1}{\sqrt{\alpha }\omega_\mathrm{L} \gamma_\mathrm{s,\, max}}.
 \end{equation}
 % TODO add a note to this chapter intro about the mechanism for HHG generation from solids when mentioning the ROM model
-Hence, $\Delta t \sim a_0^{-1}$ and $\Delta l \sim 1/a_0^{-3}$ and the cut-off frequency corresponding to the highest frequency component of the pulse is
+Hence, $\Delta t \sim a_0^{-1}$ and $\Delta l \sim 1/a_0^{-3}$ and the cutoff frequency corresponding to the highest frequency component of the pulse is
 \begin{equation}\label{eq:orion-omegac}
 	\frac{\omega_\mathrm{c}}{\omega_\mathrm{L}} \sim \sqrt{\alpha}\gamma_\mathrm{s,\, max}^3 \sim a_0^3.
 \end{equation}
-Equation \ref{eq:orion-omegac} reproduces the cut-off of the full derivation. Within the ROM model, this sharp pulse of radiation is masked by the low-order harmonics. Filtration is necessary to realise the attosecond duration of the high harmonic pulse.
+Equation \ref{eq:orion-omegac} reproduces the cutoff of the full derivation. Within the ROM model, this sharp pulse of radiation is masked by the low-order harmonics. Filtration is necessary to realise the attosecond duration of the high harmonic pulse.
 
-The harmonic spectrum envelope for photon energies below the cut-off can be calculated from examination of the fields at the surface. 
+The harmonic spectrum envelope for photon energies below the cutoff can be calculated from examination of the fields at the surface. 
 Consider the Poynting vector
 \begin{equation}
 	\mathbf{S} = \frac{1}{\mu_0}\mathbf{E}\times\mathbf{B}.
@@ -107,7 +107,7 @@ Equation \ref{eq:I_n} has two distinct regions. For $n<N^{3/2} = \sqrt{8\alpha}\
 \begin{equation}
 	I_n \sim n^{-8/3}.
 \end{equation}
-Above the cut-off, the spectrum decays exponentially.
+Above the cutoff, the spectrum decays exponentially.
 
 Note that Equation \ref{eq:I_n} only accounts for the contribution from a single gamma spike. In general, the slow envelope of the spectrum is unchanged \cite{baevaHighHarmonicGeneration2008} but there can be destructive interference between spikes leading to modulations in the spectrum for specific harmonics. This can cause certain orders to vanish such as is the case for even order harmonics for s-polarised incident light \cite{lichtersShortpulseLaserHarmonics1996}. This results from symmetries in the equations of motion \cite{trinesLaserHarmonicGeneration2023}. 
 
@@ -120,7 +120,7 @@ Baeva's theory provides the relative intensity of harmonics. However, for compar
 \begin{equation}
 	I_\omega(\omega) = \frac{dE_\omega(J)}{dAd\omega} = I_0 \sum^{n_\mathrm{C}}_{n = 1,\ \mathrm{odd}} n^{-p} S_n\left( \frac{\omega}{\omega_\mathrm{L}}-n\right)
 \end{equation}
-up to the cut-off, $n_\mathrm{C}$. Here, $S_n(\omega/\omega_\mathrm{L}-n)$ is the spectral shape function of the $n^\mathrm{th}$ harmonic in reciprocal space and $I_0$ is the normalisation factor of interest. From conservation of energy,
+up to the cutoff, $n_\mathrm{C}$. Here, $S_n(\omega/\omega_\mathrm{L}-n)$ is the spectral shape function of the $n^\mathrm{th}$ harmonic in reciprocal space and $I_0$ is the normalisation factor of interest. From conservation of energy,
 \begin{equation}
 	\int I_\omega(\omega) \mathrm{d}\omega \mathrm{d} A = ER,
 \end{equation}
@@ -161,7 +161,7 @@ Applying momentum balance between the laser pulse and particles in the rest fram
 	\frac{v_\mathrm{HB}}{c} = \sqrt{\frac{R\cos\theta}{2}\frac{Zm_\mathrm{e}}{Am_\mathrm{p}}\frac{n_\mathrm{c}}{n_\mathrm{e}(x_\mathrm{i}(t,y))}}a_L(t,y) = \Pi a_L(t,y),
 \end{equation}
 where $R$ is the RPM reflectivity, $\theta$ is the angle of incidence, \qty{16}{\degree} in the ORION experiment, $Z$ and $A$ are the atomic and atomic mass numbers respectively for the plasma ions, $n_\mathrm{c}$ is the plasma critical density, $n_\mathrm{e}(x_\mathrm{i}(t,y))$ the electron number density and $x_\mathrm{i}(t,y)$
-the depth of hole boring, from the Supplementary Material \cite{vincentiOpticalPropertiesRelativistic2014}. For the ORION laser pulse parameter space $\Pi \ll a_\mathrm{L}\forall t$ , \textit{i.e.} relativistic electrons and non-relativistic ions. Hence, the relativistic correction derived by Robinson \textit{et al} \cite{robinsonRelativisticallyCorrectHoleboring2009} to Equation \ref{eq:v_HB} can be neglected. Due to the high contrast and long duration of the ORION beamlines, there is minimal pre-plasma formation on the front surface and therefore the number density is simply the number density of the material in solid form and $n_\mathrm{e}$ is independent of $x_\mathrm{i}(t,y)$. Robinson \textit{et al} \cite{robinsonHoleboringRadiationPressure2009} generalised momentum conservation to multiple species. Replacing the mass density with the composite mass density $\rho = \sum_j m_{\mathrm{i}j}n_{\mathrm{i}j}$, then
+the depth of hole boring, from the Supplementary Material \cite{vincentiOpticalPropertiesRelativistic2014}. For the ORION laser pulse parameter space $\Pi \ll a_\mathrm{L}\forall t$ , \textit{i.e.} relativistic electrons and non-relativistic ions. Hence, the relativistic correction derived by Robinson \textit{et al} \cite{robinsonRelativisticallyCorrectHoleboring2009} to Equation \ref{eq:v_HB} can be neglected. Due to the high contrast and long duration of the ORION beamlines, there is minimal preplasma formation on the front surface and therefore the number density is simply the number density of the material in solid form and $n_\mathrm{e}$ is independent of $x_\mathrm{i}(t,y)$. Robinson \textit{et al} \cite{robinsonHoleboringRadiationPressure2009} generalised momentum conservation to multiple species. Replacing the mass density with the composite mass density $\rho = \sum_j m_{\mathrm{i}j}n_{\mathrm{i}j}$, then
 \begin{equation}
 	\frac{An_\mathrm{e}}{Z} \to \sum_j \frac{A_jn_{\mathrm{e}j}}{Z_j},
 \end{equation}
@@ -253,7 +253,7 @@ At the new \ac{RPM} focal point, $z = z_\mathrm{f}$, the demagnification factor 
 This determines the new peak intensity to be yielded by hole boring alone. A pre-curved target can achieve the same effect.
 
 \subsection{Harmonic source size}
-There is some harmonic source size shrinkage inherent to the interaction. Perhaps surprisingly, at photon energies below the harmonic cut-off, Vincenti \textit{et al} demonstrated a weak dependence on harmonic order \cite{vincentiOpticalPropertiesRelativistic2014}, finding $w_n \approx 0.5 w_\mathrm{L}$ from their 1D PIC simulation parameter scan. Approaching the cut-off, the harmonic source size shrinkage is enhanced by the roll-off. While it is unfeasible to perform a similar parameter scan to confirm this dependence, at least the magnification factor is only weakly dependent on $w_n$ and hence this uncertainty does not pose a huge issue for calculation of the signal at OHREX, nor for calculation of the peak intensity at the new focus, since the wings of the spectrum do not contribute. Applying the theory to ORION beamline parameters and fitting a Gaussian to the new spot size, there is no additional shrinkage for the SP2 spot and at worst case for the SP1 laser, $w_{1000} = 0.21w_\mathrm{L}$.
+There is some harmonic source size shrinkage inherent to the interaction. Perhaps surprisingly, at photon energies below the harmonic cutoff, Vincenti \textit{et al} demonstrated a weak dependence on harmonic order \cite{vincentiOpticalPropertiesRelativistic2014}, finding $w_n \approx 0.5 w_\mathrm{L}$ from their 1D PIC simulation parameter scan. Approaching the cutoff, the harmonic source size shrinkage is enhanced by the roll-off. While it is unfeasible to perform a similar parameter scan to confirm this dependence, at least the magnification factor is only weakly dependent on $w_n$ and hence this uncertainty does not pose a huge issue for calculation of the signal at OHREX, nor for calculation of the peak intensity at the new focus, since the wings of the spectrum do not contribute. Applying the theory to ORION beamline parameters and fitting a Gaussian to the new spot size, there is no additional shrinkage for the SP2 spot and at worst case for the SP1 laser, $w_{1000} = 0.21w_\mathrm{L}$.
 
 Incidentally, source size shrinkage reduces the error on the parabolic mirror approximation. The fractional error between the approximation and the true surface as a function of the distance from the centre of the mirror is
 \begin{equation}
@@ -390,7 +390,7 @@ It would be interesting to extract the reflected beam temporal profile after fil
 	\caption[Attosecond pulse train from the filtered reflected laser pulse.]{\textbf{Attosecond pulse train from the filtered reflected laser pulse.} The filtered beam contains only harmonics above $n = 50$.}
 	\label{fig:orionattosecondpulse}
 \end{figure}
-The filtered beam consists of a series of attosecond pulses of radiation, the brightest pulse is of duration 30.3 as. This is an order of magnitude above the duration of the X-ray pulse as predicted from the cut-off expression. Note that the intensity of the first few laser cycles is insufficient for the generation of harmonics above $n = 50$ and there is therefore no signal here, effectively reducing the pulse train length.
+The filtered beam consists of a series of attosecond pulses of radiation, the brightest pulse is of duration 30.3 as. This is an order of magnitude above the duration of the X-ray pulse as predicted from the cutoff expression. Note that the intensity of the first few laser cycles is insufficient for the generation of harmonics above $n = 50$ and there is therefore no signal here, effectively reducing the pulse train length.
 
 % TODO NO Confident now that in the theory of ROM HHG for ORION parameters, there is one final consideration that cannot be observed in 1D. The SP1 beamline consists of two beamlets. Am I including this or not? For this simulation, the Bouchard solver was applied.
 
@@ -681,7 +681,7 @@ Figure \ref{fig:orionq1011} is a typical calibrated signal from the quartz ($10\
 \end{figure}
 For each shot the mean signal across the dispersion axis was calculated and the errors from statistics, the fade time (11 \%), the IP sensitivity (1.5 \%), the dispersion axis (2.9 \%) and the OHREX crystal reflectivity (11 \%) accounted for.
 
-As demonstrated in Section \ref{ch:3-sec:theory}, the intensity of X-ray harmonics is highly sensitive to the intensity of individual pulse cycles due to the proximity of the measurement to the exponential roll-off in the spectrum. However, even neglecting the shot-to-shot variation, it is not possible to know the precise sub-cycle spatio-temporal structure of a petawatt-class laser pulse. Indeed, the simple measurement of the peak intensity of such a pulse remains an open problem \cite{perevalovLaserPeelerRegime2023,ouatuIonizationStatesMultipetawatt2022}. Approximations and assumptions must be made, that is, that the SP1 and SP2 beamlines can be adequately described by spatial Gaussians and temporal sech$^2$ and sech profiles respectively, and that the duration and energy are well-defined. 
+As demonstrated in Section \ref{ch:3-sec:theory}, the intensity of X-ray harmonics is highly sensitive to the intensity of individual pulse cycles due to the proximity of the measurement to the exponential roll-off in the spectrum. However, even neglecting the shot-to-shot variation, it is not possible to know the precise sub-cycle spatiotemporal structure of a petawatt-class laser pulse. Indeed, the simple measurement of the peak intensity of such a pulse remains an open problem \cite{perevalovLaserPeelerRegime2023,ouatuIonizationStatesMultipetawatt2022}. Approximations and assumptions must be made, that is, that the SP1 and SP2 beamlines can be adequately described by spatial Gaussians and temporal sech$^2$ and sech profiles respectively, and that the duration and energy are well-defined. 
 
 The upper limit on laser pulse spot size obtained from the KBRXM diagnostic corresponds to a lower limit on laser pulse intensity and therefore also of XHHG efficiency near roll-off. Figure \ref{fig:orionintensitycurves} plots XHHG spectral intensity curves for the quartz ($10\bar{1}1$) crystal central energy as a function of laser spot size for the targets and laser pulse configurations explored in the experiment. 
 \begin{figure}
